--- a/index.html
+++ b/index.html
@@ -33,7 +33,37 @@
      </header>
 
      <div class="content" id="content">
-          
+          <h1 class="main_section">Przyszłość zarządzania
+               <span id="dynamicWord">zgłoszeniami</span>
+          </h1>
+          <div class="introduction_section">
+               <div class="introduction_section_text_container">
+                    <h2 class="introduction_section_title">Innowacyjność i Doświadczenie</h2>
+                    <p class="introduction_section_text">
+                         W TechReports łączymy innowacje z doświadczeniem, aby dostarczyć najbardziej zaawansowane
+                         rozwiązania
+                         w zarządzaniu zgłoszeniami. Dzięki naszym systemom, firmy każdej wielkości mogą przekształcić
+                         wyzwania w możliwości, poprawiając komunikację, efektywność i satysfakcję klientów. Nasze
+                         rozwiązania są wyjątkowe dzięki indywidualnemu podejściu.
+                         Każdy system jest dostosowywany do specyfiki działalności klienta, zapewniając maksymalną
+                         efektywność
+                         i integrację z istniejącymi procesami.
+                    </p>
+               </div>
+          </div>
+
+          <div class="features_section">
+               <h2 class="features_section_title">Zaangażowanie w Innowacje</h2>
+               <p class="features_section_text">
+                    "Co wyróżnia TechReports? To nasze nieustające dążenie do innowacji.
+                    Regularnie aktualizujemy nasze systemy, aby odpowiadały na dynamicznie zmieniające
+                    się wymagania rynku i technologii. Nasze zespoły badawczo-rozwojowe skupiają się na
+                    ciągłym ulepszaniu i wprowadzaniu nowych funkcjonalności, aby nasi klienci zawsze
+                    byli o krok przed konkurencją. Elastyczność naszych rozwiązań umożliwia łatwe
+                    skalowanie wraz z rozwojem Twojej firmy, bez konieczności inwestowania w zupełnie
+                    nowe systemy.
+               </p>
+          </div>
 
      </div>
 
