--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
      </footer>
 
      <script src="js/script.js"></script>
+     <button id="scrollToTopButton" title="Przewiń do góry">↑</button>
 </body>
+
 
 
 </html>
