--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
      <title>TechReports</title>
+
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="css/styleHeader.css">
 </head>
@@ -12,20 +13,26 @@
           <div class="header_inner">
                <h1 class="logo"><a href="index.html">TechReports</a></h1>
                <nav class="header_menu">
+                    <div class="menu_toggle" id="mobile_menu">
+                         <span class="bar"></span>
+                         <span class="bar"></span>
+                         <span class="bar"></span>
+                    </div>
                     <ul class="header_menu_links">
                          <li><a href="pages/services.html">Usługi</a></li>
                          <li><a href="pages/technologies.html">Technologie</a></li>
                          <li><a href="pages/contact.html">Kontakt</a></li>
                          <li><a href="pages/about.html">O nas</a></li>
-                         <div class="search-icon">
-                              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
-                                   class="icon-size">
-                                   <path fill-rule="evenodd"
-                                        d="M10.5 3.75a6.75 6.75 0 100 13.5 6.75 6.75 0 000-13.5zM2.25 10.5a8.25 8.25 0 1114.59 5.28l4.69 4.69a.75.75 0 11-1.06 1.06l-4.69-4.69A8.25 8.25 0 012.25 10.5z"
-                                        clip-rule="evenodd" />
-                              </svg>
-                         </div>
+
                     </ul>
+                    <div class="search-icon">
+                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
+                              class="icon-size">
+                              <path fill-rule="evenodd"
+                                   d="M10.5 3.75a6.75 6.75 0 100 13.5 6.75 6.75 0 000-13.5zM2.25 10.5a8.25 8.25 0 1114.59 5.28l4.69 4.69a.75.75 0 11-1.06 1.06l-4.69-4.69A8.25 8.25 0 012.25 10.5z"
+                                   clip-rule="evenodd" />
+                         </svg>
+                    </div>
                </nav>
           </div>
 
@@ -36,6 +43,16 @@
           <h1 class="main_section">Przyszłość zarządzania
                <span id="dynamicWord">zgłoszeniami</span>
           </h1>
+          <div class="button_contact_us_ontainer">
+               <h3 class="button_contact_us" id="button_contact_us">
+                    <a href="index.html" class="link_button_contact_us">Skontaktuj się z nami!</a>
+
+               </h3>
+             
+          </div>
+               
+
+
           <div class="introduction_section">
                <div class="introduction_section_text_container">
                     <h2 class="introduction_section_title">Innowacyjność i Doświadczenie</h2>
@@ -70,9 +87,11 @@
      <footer>
           <p>© 2023 Moja Prosta Strona</p>
      </footer>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
      <script src="js/script.js"></script>
-     <button id="scrollToTopButton" title="Przewiń do góry">↑</button>
+     <script src="js/script_mobile_icon.js"></script>
+     <button id="button_scroll_to_top" title="Przewiń do góry">↑</button>
 </body>
 
 
