--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 
 <head>
      <title>TechReports</title>
-
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+          rel="stylesheet">
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="css/styleHeader.css">
      <link rel="stylesheet" href="css/footer.css">
+     <link rel="stylesheet" href="css/contact.css">
 </head>
 
 <body>
@@ -44,10 +49,11 @@
           <h1 class="main_section">Przyszłość zarządzania
                <span id="dynamicWord">zgłoszeniami</span>
           </h1>
-          <div class="button_contact_us_ontainer">
+          <div class="button_contact_us_container">
                <h3 class="button_contact_us" id="button_contact_us">
-                    <a href="index.html" class="link_button_contact_us">Skontaktuj się z nami!</a>
-
+                    <nav class="nav_link_button_contact_us">
+                         <a href="pages/contact.html" class="link_button_contact_us">Skontaktuj się z nami!</a>
+                    </nav>
                </h3>
 
           </div>
@@ -99,26 +105,35 @@
           </div>
           <h2 class="opinions_section_title">Wasze opinie</h2>
           <div class="opinions_section">
-               
+
                <div class="opinion">
-                    <h5 class="personal_data">Dyrektora ds. Technologii w firmie e-commerce</h5>
+                    <h5 class="personal_data">Dyrektor ds. Technologii w firmie e-commerce</h5>
                     <p class="text_opinion">Dzięki TechReports udało nam się przekształcić nasz proces zarządzania
                          zgłoszeniami klientów. Ich system nie tylko zwiększył naszą wydajność, ale
                          także znacząco poprawił satysfakcję naszych klientów. Jestem pod wrażeniem,
                          jak elastyczne i intuicyjne są ich rozwiązania.</p>
                </div>
                <div class="opinion">
-                    <h5 class="personal_data">Managera IT w korporacji finansowej</h5>
-                    <p class="text_opinion">TechReports to dla nas coś więcej niż dostawca - to partner w innowacjach. Ich systemy zarządzania zgłoszeniami zintegrowały się bezproblemowo z naszymi istniejącymi procesami, przynosząc natychmiastową poprawę wydajności. Ich wsparcie i dedykacja są bezkonkurencyjne</p>
+                    <h5 class="personal_data">Manager IT w korporacji finansowej</h5>
+                    <p class="text_opinion">TechReports to dla nas coś więcej niż dostawca - to partner w innowacjach.
+                         Ich systemy zarządzania zgłoszeniami zintegrowały się bezproblemowo z naszymi istniejącymi
+                         procesami, przynosząc natychmiastową poprawę wydajności. Ich wsparcie i dedykacja są
+                         bezkonkurencyjne</p>
                </div>
                <div class="opinion">
-                    <h5 class="personal_data">Dyrektora Operacyjnego w branży zdrowia
+                    <h5 class="personal_data">Dyrektor Operacyjnego w branży zdrowia
                     </h5>
-                    <p class="text_opinion">"W sektorze zdrowia szybka i skuteczna komunikacja jest kluczowa. System TechReports zmienił sposób, w jaki zarządzamy zgłoszeniami pacjentów i personelu. Ich innowacyjne podejście do analityki i automatyzacji znacząco przyczyniło się do poprawy naszych usług</p>
+                    <p class="text_opinion">"W sektorze zdrowia szybka i skuteczna komunikacja jest kluczowa. System
+                         TechReports zmienił sposób, w jaki zarządzamy zgłoszeniami pacjentów i personelu. Ich
+                         innowacyjne podejście do analityki i automatyzacji znacząco przyczyniło się do poprawy naszych
+                         usług</p>
                </div>
                <div class="opinion">
-                    <h5 class="personal_data">Kierownika Projektu w branży edukacyjnej</h5>
-                    <p class="text_opinion">TechReports zrewolucjonizował sposób, w jaki nasza instytucja edukacyjna zarządza wnioskami i zgłoszeniami. Ich rozwiązanie jest niezawodne, łatwe w obsłudze i przede wszystkim - skuteczne. Dzięki nim możemy skupić się na dostarczaniu jakości edukacji, mając pewność, że nasze procesy są w dobrych rękach</p>
+                    <h5 class="personal_data">Kierownik Projektu w branży edukacyjnej</h5>
+                    <p class="text_opinion">TechReports zrewolucjonizował sposób, w jaki nasza instytucja edukacyjna
+                         zarządza wnioskami i zgłoszeniami. Ich rozwiązanie jest niezawodne, łatwe w obsłudze i przede
+                         wszystkim - skuteczne. Dzięki nim możemy skupić się na dostarczaniu jakości edukacji, mając
+                         pewność, że nasze procesy są w dobrych rękach</p>
                </div>
 
           </div>
