contactPage ver-2 form

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -50,7 +50,7 @@
                </tr>
           </table>
      </div>
-     <form id="contact-form">
+     <form id="contact-form" class="contact_form" >
           <label for="fullName">
                Imię i nazwisko:
           </label>
@@ -71,7 +71,9 @@
                Wiadomość:
           </label>
           <textarea id="message" name="message"></textarea>
-          <input type="contact_submit" value="Wyślij">
+          <div class="button_container">
+          <button type="submit">Wyślij</button>
+     </div>
      </form>
 
 
