--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,5 +1,6 @@
 <div class="contact_page">
      <h1 class="contact_title">Kontakt</h1>
+     <div class="full_width_line"></div>
      <div class="contact_map_open_hours">
           <div class="contact_map">
                <iframe
@@ -50,32 +51,39 @@
                </tr>
           </table>
      </div>
-     <form id="contact-form" class="contact_form" >
-          <label for="fullName">
-               Imię i nazwisko:
-          </label>
-          <input type="text" id="fullName" name="fullName">
-          <label for="email">
-               E-mail:
-          </label>
-          <input type="email" id="email" name="email">
-          <label for="phone">
-               Telefon:
-          </label>
-          <input type="tel" id="phone" name="phone">
-          <label for="topic">
-               Temat:
-          </label>
-          <input type="text" id="topic" name="topic">
-          <label for="message">
-               Wiadomość:
-          </label>
-          <textarea id="message" name="message"></textarea>
-          <div class="button_container">
-          <button type="submit">Wyślij</button>
+     <div class="contact_us_contact_form">
+          <div class="full_width_line"></div>
+
+          <div class="contact_us">
+               Albo skontaktu się z nami!
+          </div>
+          <div class="full_width_line"></div>
+          <form class="contact_form">
+               <label for="fullName">
+                    Imię i nazwisko:
+               </label>
+               <input type="text" id="fullName" name="fullName">
+               <label for="email">
+                    E-mail:
+               </label>
+               <input type="email" id="email" name="email">
+               <label for="phone">
+                    Telefon:
+               </label>
+               <input type="tel" id="phone" name="phone">
+               <label for="topic">
+                    Temat:
+               </label>
+               <input type="text" id="topic" name="topic">
+               <label for="message">
+                    Wiadomość:
+               </label>
+               <textarea id="message" name="message"></textarea>
+               <div class="button_container">
+                    <button type="submit">Wyślij</button>
+               </div>
+          </form>
+
      </div>
-     </form>
-
-
 
 </div>
