--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,4 +1,7 @@
-<div class="contact_page">
+<script src="https://code.jquery.com/jquery-3.7.1.js" 
+integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" 
+crossorigin="anonymous"></script> 
+<div class="contact_page" >
      <h1 class="contact_title">Kontakt</h1>
      <div class="full_width_line"></div>
      <div class="contact_map_open_hours">
@@ -51,6 +54,25 @@
                </tr>
           </table>
      </div>
+  
+     <div class="container">
+
+          <div class="slider_wrapper">
+            <div class="inner_wrapper">
+              <div class="slide"><img src="/images/building1.jpg"></div>
+              <div class="slide"><img src="/images/building2.png"></div>
+              <div class="slide"><img src="/images/building3.jpg"></div>
+              <div class="slide"><img src="/images/building4.jpg"></div>
+            </div>
+          </div>
+      
+          <div class="button prev"></div>
+          <div class="button next"></div>
+        </div>
+
+        
+
+
      <div class="contact_us_contact_form">
           <div class="full_width_line"></div>
 
