--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
      <title>TechReports</title>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+
+
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,21 +21,22 @@
 
 <body>
      <header>
-          <div class="header_inner">
+          <nav class="nav_bar">
                <h1 class="logo"><a href="index.html">TechReports</a></h1>
-               <nav class="header_menu">
-                    <div class="menu_toggle" id="mobile_menu">
+               <nav class="nav_menu">
+
+                    <ul class="nav_item">
+                         <li><a href="pages/services.html" class="nav_link">Usługi</a></li>
+                         <li><a href="pages/technologies.html" class="nav_link">Technologie</a></li>
+                         <li><a href="pages/contact.html" class="nav_link">Kontakt</a></li>
+                         <li><a href="pages/about.html" class="nav_link">O nas</a></li>
+
+                    </ul>
+                    <div class="menu_toggle">
                          <span class="bar"></span>
                          <span class="bar"></span>
                          <span class="bar"></span>
                     </div>
-                    <ul class="header_menu_links">
-                         <li><a href="pages/services.html">Usługi</a></li>
-                         <li><a href="pages/technologies.html">Technologie</a></li>
-                         <li><a href="pages/contact.html">Kontakt</a></li>
-                         <li><a href="pages/about.html">O nas</a></li>
-
-                    </ul>
                     <div class="search-icon">
                          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
                               class="icon-size">
@@ -40,13 +46,12 @@
                          </svg>
                     </div>
                </nav>
-          </div>
-
-
+          </nav>
      </header>
 
      <div class="content" id="content">
-          <h1 class="main_section">Przyszłość zarządzania
+          <h1 class="main_section">
+               <div class="future_text">Przyszłość zarządzania</div>
                <span id="dynamicWord">zgłoszeniami</span>
           </h1>
           <div class="button_contact_us_container">
@@ -138,6 +143,7 @@
 
           </div>
 
+
      </div>
 
      <footer class="footer_section">
@@ -149,6 +155,9 @@
      <script src="js/dynamicWord.js"></script>
      <script src="js/scrollToTop.js"></script>
      <script src="js/script_mobile_icon.js"></script>
+
+     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+     <script src="jQuery/slideShowContact.js"></script>
      <button id="button_scroll_to_top" title="Przewiń do góry">↑</button>
 </body>
 
