--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
      <header>
           <nav class="nav_bar">
-               <h1 class="logo"><a href="index.html">TechReports</a></h1>
+               <h1 class="logo"><nav><a href="index.html">TechReports</a></nav></h1>
                <nav class="nav_menu">
 
                     <ul class="nav_item">
