aboutUs ver-1 (template)

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,1 +1,117 @@
-<h1>O nas</h1>
+<link rel="stylesheet" href="css/aboutUs.css">
+<div class="about_us_page">
+     <div class="about_us_container">
+          <div class="about_us">
+               <h1 class="about_us_title">O TechReports</h1>
+               <div class="full_width_line"></div>
+               <p class="about_us_text">
+                    Jesteśmy dynamicznie rozwijającym się liderem na rynku technologicznym i doradczym o zasięgu
+                    globalnym.
+                    Specjalizujemy się w dostarczaniu naszym klientom spersonalizowanych,
+                    niezawodnych rozwiązań software'owych, precyzyjnie dopasowanych do ich unikalnych potrzeb."
+               </p>
+
+          </div>
+          <div>
+               <img class="about_us_photo" src="/images/aboutUs.jpeg" alt="Abstrakcyjne przedstawienie pracy zespołowej 
+               w IT z osobami i ikonami koła zębatego. Na pierwszym planie 
+               mężczyzna w niebieskiej koszulce pracuje na laptopie, a drugi
+                mężczyzna obok, również w niebieskim, wskazuje na koła zębate 
+                symbolizujące dane, finanse, bezpieczeństwo i współpracę.">
+          </div>
+     </div>
+     <div class="stats_container">
+          <div class="stat">
+               <div class="number">1000+</div>
+               <div class="descriptor">specjalistów</div>
+          </div>
+          <div class="stat">
+               <div class="number">800+</div>
+               <div class="descriptor">zadowolonych klientów</div>
+          </div>
+          <div class="stat">
+               <div class="number">25+</div>
+               <div class="descriptor">lat doświadczenia</div>
+          </div>
+     </div>
+     <div class="management_team">
+          <h2 class="management_title">Kadra zarządzająca</h2>
+          <p class="management_description">
+               tekst
+          </p>
+          <div class="management_cards_container">
+               <div class="management-card">
+                    <div class="management_card_role">
+                         Dyrektor Generalny
+                    </div>
+                    <div class="management_card_name">
+                         Anna Kowalska
+                    </div>
+                    <div class="management_card_description">
+                         Anna Kowalska, jako Dyrektor Generalny,
+                         odpowiada za ogólne kierowanie firmą TechReports.
+                         Jej rola koncentruje się na strategii rozwoju, zarządzaniu
+                         zespołami oraz utrzymywaniu relacji z kluczowymi klientami
+                         i partnerami.
+                    </div>
+                    <div class="management_card_social">
+                         <a href="https://www.linkedin.com/">LinkedIn</a>
+                    </div>
+                    <div class="management_card_photo">
+
+                    </div>
+               </div>
+               <div class="management-card">
+                    <div class="management_card_role">
+
+                    </div>
+                    <div class="management_card_name">
+
+                    </div>
+                    <div class="management_card_description">
+
+                    </div>
+                    <div class="management_card_social">
+
+                    </div>
+                    <div class="management_card_photo">
+
+                    </div>
+               </div>
+               <div class="management-card">
+                    <div class="management_card_role">
+
+                    </div>
+                    <div class="management_card_name">
+
+                    </div>
+                    <div class="management_card_description">
+
+                    </div>
+                    <div class="management_card_social">
+
+                    </div>
+                    <div class="management_card_photo">
+
+                    </div>
+               </div>
+               <div class="management-card">
+                    <div class="management_card_role">
+
+                    </div>
+                    <div class="management_card_name">
+
+                    </div>
+                    <div class="management_card_description">
+
+                    </div>
+                    <div class="management_card_social">
+
+                    </div>
+                    <div class="management_card_photo">
+
+                    </div>
+               </div>
+          </div>
+     </div>
+</div>
