aboutUs ver-2 (numberAnimation)

--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
      <title>TechReports</title>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
-
-
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -140,10 +137,7 @@
                          wszystkim - skuteczne. Dzięki nim możemy skupić się na dostarczaniu jakości edukacji, mając
                          pewność, że nasze procesy są w dobrych rękach</p>
                </div>
-
           </div>
-
-
      </div>
 
      <footer class="footer_section">
@@ -157,7 +151,9 @@
      <script src="js/script_mobile_icon.js"></script>
 
      <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-animateNumber/0.0.14/jquery.animateNumber.min.js"></script>
      <script src="jQuery/slideShowContact.js"></script>
+     <script src="jQuery/numberAnimation.js"></script>
      <button id="button_scroll_to_top" title="Przewiń do góry">↑</button>
 </body>
 
