--- a/pages/about.html
+++ b/pages/about.html
@@ -22,15 +22,15 @@
      </div>
      <div class="stats_container">
           <div class="stat">
-               <div class="number">1000+</div>
+               <div class="number" data_number="1000">0</div>
                <div class="descriptor">specjalistów</div>
           </div>
           <div class="stat">
-               <div class="number">800+</div>
+               <div class="number" data_number="600">0</div>
                <div class="descriptor">zadowolonych klientów</div>
           </div>
           <div class="stat">
-               <div class="number">25+</div>
+               <div class="number" data_number="25">0</div>
                <div class="descriptor">lat doświadczenia</div>
           </div>
      </div>
