--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
      <link rel="stylesheet" href="css/styleHeader.css">
      <link rel="stylesheet" href="css/footer.css">
      <link rel="stylesheet" href="css/contact.css">
+     <link rel="stylesheet" href="css/aboutUs.css">
 </head>
 
 <body>
