aboutUs ver-3 (managementIntro)

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,44 +1,52 @@
-<link rel="stylesheet" href="css/aboutUs.css">
 <div class="about_us_page">
-     <div class="about_us_container">
-          <div class="about_us">
-               <h1 class="about_us_title">O TechReports</h1>
-               <div class="full_width_line"></div>
-               <p class="about_us_text">
-                    Jesteśmy dynamicznie rozwijającym się liderem na rynku technologicznym i doradczym o zasięgu
-                    globalnym.
-                    Specjalizujemy się w dostarczaniu naszym klientom spersonalizowanych,
-                    niezawodnych rozwiązań software'owych, precyzyjnie dopasowanych do ich unikalnych potrzeb."
-               </p>
+     <div class="about_us_and_stats">
+          <div class="about_us_container">
+               <div class="about_us">
+                    <h1 class="about_us_title">O TechReports</h1>
+                    <div class="full_width_line"></div>
+                    <p class="about_us_text">
+                         Jesteśmy dynamicznie rozwijającym się liderem na rynku technologicznym i doradczym o zasięgu
+                         globalnym.
+                         Specjalizujemy się w dostarczaniu naszym klientom spersonalizowanych,
+                         niezawodnych rozwiązań software'owych, precyzyjnie dopasowanych do ich unikalnych potrzeb."
+                    </p>
 
-          </div>
-          <div>
-               <img class="about_us_photo" src="/images/aboutUs.jpeg" alt="Abstrakcyjne przedstawienie pracy zespołowej 
+               </div>
+               <div>
+                    <img class="about_us_photo" src="/images/aboutUs.jpeg" alt="Abstrakcyjne przedstawienie pracy zespołowej 
                w IT z osobami i ikonami koła zębatego. Na pierwszym planie 
                mężczyzna w niebieskiej koszulce pracuje na laptopie, a drugi
                 mężczyzna obok, również w niebieskim, wskazuje na koła zębate 
                 symbolizujące dane, finanse, bezpieczeństwo i współpracę.">
+               </div>
           </div>
-     </div>
-     <div class="stats_container">
-          <div class="stat">
-               <div class="number" data_number="1000">0</div>
-               <div class="descriptor">specjalistów</div>
-          </div>
-          <div class="stat">
-               <div class="number" data_number="600">0</div>
-               <div class="descriptor">zadowolonych klientów</div>
-          </div>
-          <div class="stat">
-               <div class="number" data_number="25">0</div>
-               <div class="descriptor">lat doświadczenia</div>
+          <div class="stats_container">
+               <div class="stat">
+                    <div class="number" data-number="1000">0</div>
+                    <div class="descriptor">specjalistów</div>
+               </div>
+               <div class="stat">
+                    <div class="number" data-number="600">0</div>
+                    <div class="descriptor">zadowolonych klientów</div>
+               </div>
+               <div class="stat">
+                    <div class="number" data-number="25">0</div>
+                    <div class="descriptor">lat doświadczenia</div>
+               </div>
           </div>
      </div>
      <div class="management_team">
-          <h2 class="management_title">Kadra zarządzająca</h2>
-          <p class="management_description">
-               tekst
-          </p>
+          <div class="management_team_intro">
+               
+               <h2 class="management_title">Kadra zarządzająca</h2>
+               <div class="full_width_line"></div>
+               <p class="management_description">
+                    Zapoznaj się z doświadczonym zespołem kierowniczym TechReports:
+                    spotkaj profesjonalistów, których wiedza i umiejętności są
+                    kluczem do strategicznego, operacyjnego i taktycznego sukcesu
+                    naszej firmy.
+               </p>
+          </div>
           <div class="management_cards_container">
                <div class="management-card">
                     <div class="management_card_role">
