aboutUs ver-4 (managementCards)

--- a/pages/about.html
+++ b/pages/about.html
@@ -37,7 +37,6 @@
      </div>
      <div class="management_team">
           <div class="management_team_intro">
-               
                <h2 class="management_title">Kadra zarządzająca</h2>
                <div class="full_width_line"></div>
                <p class="management_description">
@@ -48,78 +47,111 @@
                </p>
           </div>
           <div class="management_cards_container">
-               <div class="management-card">
-                    <div class="management_card_role">
-                         Dyrektor Generalny
-                    </div>
-                    <div class="management_card_name">
-                         Anna Kowalska
-                    </div>
-                    <div class="management_card_description">
-                         Anna Kowalska, jako Dyrektor Generalny,
-                         odpowiada za ogólne kierowanie firmą TechReports.
-                         Jej rola koncentruje się na strategii rozwoju, zarządzaniu
-                         zespołami oraz utrzymywaniu relacji z kluczowymi klientami
-                         i partnerami.
-                    </div>
-                    <div class="management_card_social">
-                         <a href="https://www.linkedin.com/">LinkedIn</a>
+               <div class="management_card">
+                    <div class="management_card_info">
+                         <div class="management_card_role">
+                              Dyrektor Generalny
+                         </div>
+                         <div class="management_card_name">
+                              Anna Kowalska
+                         </div>
+                         <div class="management_card_description">
+                              Anna, jako Dyrektor Generalny,
+                              odpowiada za ogólne kierowanie firmą TechReports.
+                              Jej rola koncentruje się na strategii rozwoju, zarządzaniu
+                              zespołami oraz utrzymywaniu relacji z kluczowymi klientami
+                              i partnerami.
+                         </div>
+                         <div class="management_card_social">
+                              <a   href="https://www.linkedin.com/">
+                                   <img class="social_media" src="/images/linkedin.png" alt="link do Linkedin">
+                              </a>
+                         </div>
                     </div>
                     <div class="management_card_photo">
-
+                         <img class="photo" src="/images/AnnaKowalska.jpg" alt="Anna Kowalska">
                     </div>
                </div>
-               <div class="management-card">
-                    <div class="management_card_role">
-
-                    </div>
-                    <div class="management_card_name">
-
-                    </div>
-                    <div class="management_card_description">
-
-                    </div>
-                    <div class="management_card_social">
-
-                    </div>
+               <div class="management_card">
                     <div class="management_card_photo">
-
+                         <img class="photo" src="/images/JakubNowak.jpg" alt="Anna Kowalska">
+                    </div>
+                    <div class="management_card_info">
+                         <div class="management_card_role">
+                              Dyrektor ds. Technologii
+                         </div>
+                         <div class="management_card_name">
+                              Jakub Nowak
+                         </div>
+                         <div class="management_card_description">
+                              Jakub pełni funkcję Dyrektora ds. Technologii, koncentrując
+                              się na nadzorowaniu wszystkich aspektów technologicznych w TechReports.
+                              Jest odpowiedzialny za innowacje, rozwój produktów i utrzymanie wysokiej jakości rozwiązań
+                              IT.
+                         </div>
+                         <div class="management_card_social">
+                              <a   href="https://www.linkedin.com/">
+                                   <img class="social_media" src="/images/linkedin.png" alt="link do Linkedin">
+                              </a>
+                         </div>
                     </div>
                </div>
-               <div class="management-card">
-                    <div class="management_card_role">
+               <div class="management_card">
+                    <div class="management_card_info">
+                         <div class="management_card_role">
+                              Dyrektor ds. Operacyjnych
+                         </div>
+                         <div class="management_card_name">
+                              Marta Wiśniewska
+                         </div>
+                         <div class="management_card_description">
+                              Marta, jako Dyrektor ds. Operacyjnych, zajmuje się zarządzaniem codziennymi
+                              operacjami w TechReports. Odpowiada za optymalizację procesów, zarządzanie zasobami
+                              ludzkimi oraz nadzór nad realizacją projektów.
 
-                    </div>
-                    <div class="management_card_name">
-
-                    </div>
-                    <div class="management_card_description">
-
-                    </div>
-                    <div class="management_card_social">
-
+                         </div>
+                         <div class="management_card_social">
+                              <a   href="https://www.linkedin.com/">
+                                   <img class="social_media" src="/images/linkedin.png" alt="link do Linkedin">
+                              </a>
+                         </div>
                     </div>
                     <div class="management_card_photo">
-
+                         <img class="photo" src="/images/MartaWisniewska.jpg" alt="Anna Kowalska">
                     </div>
                </div>
-               <div class="management-card">
-                    <div class="management_card_role">
-
-                    </div>
-                    <div class="management_card_name">
-
-                    </div>
-                    <div class="management_card_description">
-
-                    </div>
-                    <div class="management_card_social">
-
-                    </div>
+               <div class="management_card">
                     <div class="management_card_photo">
-
+                         <img class="photo" src="/images/TomaszLewandowski.jpg" alt="Anna Kowalska">
+                    </div>
+                    <div class="management_card_info">
+                         <div class="management_card_role">
+                              Dyrektor ds. Rozwoju Biznesu
+                         </div>
+                         <div class="management_card_name">
+                              Tomasz Lewandowski
+                         </div>
+                         <div class="management_card_description">
+                              Tomasz, pełniąc rolę Dyrektora ds. Rozwoju Biznesu, skupia się na poszukiwaniu
+                              nowych możliwości rynkowych, rozwijaniu relacji biznesowych oraz strategiach
+                              marketingowych dla TechReports.
+                         </div>
+                         <div class="management_card_social">
+                              <a   href="https://www.linkedin.com/">
+                                   <img class="social_media" src="/images/linkedin.png" alt="link do Linkedin">
+                              </a>
+                              <a href="https://www.facebook.com/">
+                                   <img class="social_media" src="/images/fb.png" alt="link do Linkedin">
+                              </a>
+                              <a href="https://twitter.com//">
+                                   <img class="social_media" src="/images/x.webp" alt="link do Linkedin">
+                              </a>
+                         </div>
                     </div>
                </div>
           </div>
+
+
      </div>
+</div>
 </div>
