--- a/index.html
+++ b/index.html
@@ -140,21 +140,24 @@
                </div>
           </div>
      </div>
-
+     <div id="clock"></div>
      <footer class="footer_section">
           <p class="copyright">© 2023 TechReports</p>
      </footer>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-animateNumber/0.0.14/jquery.animateNumber.min.js"></script>
+     
+     <script src="jQuery/slideShowContact.js"></script>
+     <script src="jQuery/numberAnimation.js"></script>
 
      <script src="js/pageLoader.js"></script>
      <script src="js/dynamicWord.js"></script>
      <script src="js/scrollToTop.js"></script>
      <script src="js/script_mobile_icon.js"></script>
+ 
 
-     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-animateNumber/0.0.14/jquery.animateNumber.min.js"></script>
-     <script src="jQuery/slideShowContact.js"></script>
-     <script src="jQuery/numberAnimation.js"></script>
+     <script src="ajax/getTime.js"></script>
      <button id="button_scroll_to_top" title="Przewiń do góry">↑</button>
 </body>
 
