--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
      <link rel="stylesheet" href="css/footer.css">
      <link rel="stylesheet" href="css/contact.css">
      <link rel="stylesheet" href="css/aboutUs.css">
+     <link rel="stylesheet" href="css/technologies.css">
 </head>
 
 <body>
