--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,7 @@ crossorigin="anonymous"></script>
                     class="map">
                </iframe>
                <br />
-               <small>
+               <small class="larger_map_button">
                     <a href="https://www.openstreetmap.org/?mlat=52.39666&amp;mlon=16.90119#map=18/52.39666/16.90119">
                          View Larger Map</a>
                </small>
