--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
      <header>
           <nav class="nav_bar">
-               <h1 class="logo"><nav><a href="index.html">TechReports</a></nav></h1>
+               <h1 class="logo"><a href="index.html">TechReports</a></h1>
                <nav class="nav_menu">
 
                     <ul class="nav_item">
@@ -49,16 +49,16 @@
      </header>
 
      <div class="content" id="content">
-          <h1 class="main_section">
+          <div class="main_section">
                <div class="future_text">Przyszłość zarządzania</div>
                <span id="dynamicWord">zgłoszeniami</span>
-          </h1>
+          </div>
           <div class="button_contact_us_container">
-               <h3 class="button_contact_us" id="button_contact_us">
+               <div class="button_contact_us" id="button_contact_us">
                     <nav class="nav_link_button_contact_us">
                          <a href="pages/contact.html" class="link_button_contact_us">Skontaktuj się z nami!</a>
                     </nav>
-               </h3>
+               </div>
 
           </div>
 
@@ -151,6 +151,7 @@
      
      <script src="jQuery/slideShowContact.js"></script>
      <script src="jQuery/numberAnimation.js"></script>
+     <script src="jQuery/dynamicList.js"></script>
 
      <script src="js/pageLoader.js"></script>
      <script src="js/dynamicWord.js"></script>
