--- a/pages/services.html
+++ b/pages/services.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+     <title>TechReports</title>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="css/services.css">
+</head>
+<body>
 <h1>Usługi</h1>
+</body>
