--- a/pages/about.html
+++ b/pages/about.html
@@ -1,157 +1,170 @@
-<div class="about_us_page">
-     <div class="about_us_and_stats">
-          <div class="about_us_container">
-               <div class="about_us">
-                    <h1 class="about_us_title">O TechReports</h1>
-                    <div class="full_width_line"></div>
-                    <p class="about_us_text">
-                         Jesteśmy dynamicznie rozwijającym się liderem na rynku technologicznym i doradczym o zasięgu
-                         globalnym.
-                         Specjalizujemy się w dostarczaniu naszym klientom spersonalizowanych,
-                         niezawodnych rozwiązań software'owych, precyzyjnie dopasowanych do ich unikalnych potrzeb."
-                    </p>
+<!DOCTYPE html>
+<html lang="pl">
 
-               </div>
-               <div>
-                    <img class="about_us_photo" src="/images/aboutUs.jpeg" alt="Abstrakcyjne przedstawienie pracy zespołowej 
+<head>
+     <title>TechReports</title>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="css/aboutUs.css">
+</head>
+
+<body>
+     <div class="about_us_page">
+          <div class="about_us_and_stats">
+               <div class="about_us_container">
+                    <div class="about_us">
+                         <h1 class="about_us_title">O TechReports</h1>
+                         <div class="full_width_line"></div>
+                         <p class="about_us_text">
+                              Jesteśmy dynamicznie rozwijającym się liderem na rynku technologicznym i doradczym o
+                              zasięgu
+                              globalnym.
+                              Specjalizujemy się w dostarczaniu naszym klientom spersonalizowanych,
+                              niezawodnych rozwiązań software'owych, precyzyjnie dopasowanych do ich unikalnych
+                              potrzeb."
+                         </p>
+
+                    </div>
+                    <div>
+                         <img class="about_us_photo" src="/images/aboutUs.jpeg" alt="Abstrakcyjne przedstawienie pracy zespołowej 
                w IT z osobami i ikonami koła zębatego. Na pierwszym planie 
                mężczyzna w niebieskiej koszulce pracuje na laptopie, a drugi
                 mężczyzna obok, również w niebieskim, wskazuje na koła zębate 
                 symbolizujące dane, finanse, bezpieczeństwo i współpracę.">
+                    </div>
+               </div>
+               <div class="stats_container">
+                    <div class="stat">
+                         <div class="number" data-number="1000">0</div>
+                         <div class="descriptor">specjalistów</div>
+                    </div>
+                    <div class="stat">
+                         <div class="number" data-number="600">0</div>
+                         <div class="descriptor">zadowolonych klientów</div>
+                    </div>
+                    <div class="stat">
+                         <div class="number" data-number="25">0</div>
+                         <div class="descriptor">lat doświadczenia</div>
+                    </div>
                </div>
           </div>
-          <div class="stats_container">
-               <div class="stat">
-                    <div class="number" data-number="1000">0</div>
-                    <div class="descriptor">specjalistów</div>
+          <div class="management_team">
+               <div class="management_team_intro">
+                    <h2 class="management_title">Kadra zarządzająca</h2>
+                    <div class="full_width_line"></div>
+                    <p class="management_description">
+                         Zapoznaj się z doświadczonym zespołem kierowniczym TechReports:
+                         spotkaj profesjonalistów, których wiedza i umiejętności są
+                         kluczem do strategicznego, operacyjnego i taktycznego sukcesu
+                         naszej firmy.
+                    </p>
                </div>
-               <div class="stat">
-                    <div class="number" data-number="600">0</div>
-                    <div class="descriptor">zadowolonych klientów</div>
+               <div class="management_cards_container">
+                    <div class="management_card">
+                         <div class="management_card_info">
+                              <div class="management_card_role">
+                                   Dyrektor Generalny
+                              </div>
+                              <div class="management_card_name">
+                                   Anna Kowalska
+                              </div>
+                              <div class="management_card_description">
+                                   Anna, jako Dyrektor Generalny,
+                                   odpowiada za ogólne kierowanie firmą TechReports.
+                                   Jej rola koncentruje się na strategii rozwoju, zarządzaniu
+                                   zespołami oraz utrzymywaniu relacji z kluczowymi klientami
+                                   i partnerami.
+                              </div>
+                              <div class="management_card_social">
+                                   <a href="https://www.linkedin.com/">
+                                        <img class="social_media" src="/images/linkedin.png" alt="link do Linkedin">
+                                   </a>
+                              </div>
+                         </div>
+                         <div class="management_card_photo">
+                              <img class="photo" src="/images/AnnaKowalska.jpg" alt="Anna Kowalska">
+                         </div>
+                    </div>
+                    <div class="management_card">
+                         <div class="management_card_photo">
+                              <img class="photo" src="/images/JakubNowak.jpg" alt="Anna Kowalska">
+                         </div>
+                         <div class="management_card_info">
+                              <div class="management_card_role">
+                                   Dyrektor ds. Technologii
+                              </div>
+                              <div class="management_card_name">
+                                   Jakub Nowak
+                              </div>
+                              <div class="management_card_description">
+                                   Jakub pełni funkcję Dyrektora ds. Technologii, koncentrując
+                                   się na nadzorowaniu wszystkich aspektów technologicznych w TechReports.
+                                   Jest odpowiedzialny za innowacje, rozwój produktów i utrzymanie wysokiej jakości
+                                   rozwiązań
+                                   IT.
+                              </div>
+                              <div class="management_card_social">
+                                   <a href="https://www.linkedin.com/">
+                                        <img class="social_media" src="/images/linkedin.png" alt="link do Linkedin">
+                                   </a>
+                              </div>
+                         </div>
+                    </div>
+                    <div class="management_card">
+                         <div class="management_card_info">
+                              <div class="management_card_role">
+                                   Dyrektor ds. Operacyjnych
+                              </div>
+                              <div class="management_card_name">
+                                   Marta Wiśniewska
+                              </div>
+                              <div class="management_card_description">
+                                   Marta, jako Dyrektor ds. Operacyjnych, zajmuje się zarządzaniem codziennymi
+                                   operacjami w TechReports. Odpowiada za optymalizację procesów, zarządzanie zasobami
+                                   ludzkimi oraz nadzór nad realizacją projektów.
+
+                              </div>
+                              <div class="management_card_social">
+                                   <a href="https://www.linkedin.com/">
+                                        <img class="social_media" src="/images/linkedin.png" alt="link do Linkedin">
+                                   </a>
+                              </div>
+                         </div>
+                         <div class="management_card_photo">
+                              <img class="photo" src="/images/MartaWisniewska.jpg" alt="Anna Kowalska">
+                         </div>
+                    </div>
+                    <div class="management_card">
+                         <div class="management_card_photo">
+                              <img class="photo" src="/images/TomaszLewandowski.jpg" alt="Anna Kowalska">
+                         </div>
+                         <div class="management_card_info">
+                              <div class="management_card_role">
+                                   Dyrektor ds. Rozwoju Biznesu
+                              </div>
+                              <div class="management_card_name">
+                                   Tomasz Lewandowski
+                              </div>
+                              <div class="management_card_description">
+                                   Tomasz, pełniąc rolę Dyrektora ds. Rozwoju Biznesu, skupia się na poszukiwaniu
+                                   nowych możliwości rynkowych, rozwijaniu relacji biznesowych oraz strategiach
+                                   marketingowych dla TechReports.
+                              </div>
+                              <div class="management_card_social">
+                                   <a href="https://www.linkedin.com/">
+                                        <img class="social_media" src="/images/linkedin.png" alt="link do Linkedin">
+                                   </a>
+                                   <a href="https://www.facebook.com/">
+                                        <img class="social_media" src="/images/fb.png" alt="link do Linkedin">
+                                   </a>
+                                   <a href="https://twitter.com//">
+                                        <img class="social_media" src="/images/x.webp" alt="link do Linkedin">
+                                   </a>
+                              </div>
+                         </div>
+                    </div>
                </div>
-               <div class="stat">
-                    <div class="number" data-number="25">0</div>
-                    <div class="descriptor">lat doświadczenia</div>
-               </div>
+
+
           </div>
      </div>
-     <div class="management_team">
-          <div class="management_team_intro">
-               <h2 class="management_title">Kadra zarządzająca</h2>
-               <div class="full_width_line"></div>
-               <p class="management_description">
-                    Zapoznaj się z doświadczonym zespołem kierowniczym TechReports:
-                    spotkaj profesjonalistów, których wiedza i umiejętności są
-                    kluczem do strategicznego, operacyjnego i taktycznego sukcesu
-                    naszej firmy.
-               </p>
-          </div>
-          <div class="management_cards_container">
-               <div class="management_card">
-                    <div class="management_card_info">
-                         <div class="management_card_role">
-                              Dyrektor Generalny
-                         </div>
-                         <div class="management_card_name">
-                              Anna Kowalska
-                         </div>
-                         <div class="management_card_description">
-                              Anna, jako Dyrektor Generalny,
-                              odpowiada za ogólne kierowanie firmą TechReports.
-                              Jej rola koncentruje się na strategii rozwoju, zarządzaniu
-                              zespołami oraz utrzymywaniu relacji z kluczowymi klientami
-                              i partnerami.
-                         </div>
-                         <div class="management_card_social">
-                              <a   href="https://www.linkedin.com/">
-                                   <img class="social_media" src="/images/linkedin.png" alt="link do Linkedin">
-                              </a>
-                         </div>
-                    </div>
-                    <div class="management_card_photo">
-                         <img class="photo" src="/images/AnnaKowalska.jpg" alt="Anna Kowalska">
-                    </div>
-               </div>
-               <div class="management_card">
-                    <div class="management_card_photo">
-                         <img class="photo" src="/images/JakubNowak.jpg" alt="Anna Kowalska">
-                    </div>
-                    <div class="management_card_info">
-                         <div class="management_card_role">
-                              Dyrektor ds. Technologii
-                         </div>
-                         <div class="management_card_name">
-                              Jakub Nowak
-                         </div>
-                         <div class="management_card_description">
-                              Jakub pełni funkcję Dyrektora ds. Technologii, koncentrując
-                              się na nadzorowaniu wszystkich aspektów technologicznych w TechReports.
-                              Jest odpowiedzialny za innowacje, rozwój produktów i utrzymanie wysokiej jakości rozwiązań
-                              IT.
-                         </div>
-                         <div class="management_card_social">
-                              <a   href="https://www.linkedin.com/">
-                                   <img class="social_media" src="/images/linkedin.png" alt="link do Linkedin">
-                              </a>
-                         </div>
-                    </div>
-               </div>
-               <div class="management_card">
-                    <div class="management_card_info">
-                         <div class="management_card_role">
-                              Dyrektor ds. Operacyjnych
-                         </div>
-                         <div class="management_card_name">
-                              Marta Wiśniewska
-                         </div>
-                         <div class="management_card_description">
-                              Marta, jako Dyrektor ds. Operacyjnych, zajmuje się zarządzaniem codziennymi
-                              operacjami w TechReports. Odpowiada za optymalizację procesów, zarządzanie zasobami
-                              ludzkimi oraz nadzór nad realizacją projektów.
-
-                         </div>
-                         <div class="management_card_social">
-                              <a   href="https://www.linkedin.com/">
-                                   <img class="social_media" src="/images/linkedin.png" alt="link do Linkedin">
-                              </a>
-                         </div>
-                    </div>
-                    <div class="management_card_photo">
-                         <img class="photo" src="/images/MartaWisniewska.jpg" alt="Anna Kowalska">
-                    </div>
-               </div>
-               <div class="management_card">
-                    <div class="management_card_photo">
-                         <img class="photo" src="/images/TomaszLewandowski.jpg" alt="Anna Kowalska">
-                    </div>
-                    <div class="management_card_info">
-                         <div class="management_card_role">
-                              Dyrektor ds. Rozwoju Biznesu
-                         </div>
-                         <div class="management_card_name">
-                              Tomasz Lewandowski
-                         </div>
-                         <div class="management_card_description">
-                              Tomasz, pełniąc rolę Dyrektora ds. Rozwoju Biznesu, skupia się na poszukiwaniu
-                              nowych możliwości rynkowych, rozwijaniu relacji biznesowych oraz strategiach
-                              marketingowych dla TechReports.
-                         </div>
-                         <div class="management_card_social">
-                              <a   href="https://www.linkedin.com/">
-                                   <img class="social_media" src="/images/linkedin.png" alt="link do Linkedin">
-                              </a>
-                              <a href="https://www.facebook.com/">
-                                   <img class="social_media" src="/images/fb.png" alt="link do Linkedin">
-                              </a>
-                              <a href="https://twitter.com//">
-                                   <img class="social_media" src="/images/x.webp" alt="link do Linkedin">
-                              </a>
-                         </div>
-                    </div>
-               </div>
-          </div>
-
-
-     </div>
-</div>
-</div>
+</body>
