--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="css/styleHeader.css">
      <link rel="stylesheet" href="css/footer.css">
+     <link rel="stylesheet" href="css/technologies.css">
+     <link rel="stylesheet" href="css/aboutUs.css">
+     <link rel="stylesheet" href="css/contact.css">
+     <link rel="stylesheet" href="css/services.css">
 </head>
 <body>
      <header>
